--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ofintelligence-basic-whatsapp",
   "version": "1.0.0",
-  "type": "module",
   "description": "Package to interact with Whatsapp and OpenAi",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,9 +14,22 @@
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
     "axios": "^1.8.3",
+    "compression": "^1.8.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
+    "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.1",
     "mysql2": "^3.13.0",
-    "openai": "^4.87.4"
+    "openai": "^4.87.4",
+    "punycode": "^2.3.1",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
